# voidImageViewer

./: .gitignore  CMakeLists.txt  README.md
nsis/: InstallOptions2_Chinese.ini  InstallOptions_Chinese.ini  build_clion_installer.ps1  convert_to_utf8_bom.ps1  installer.nsi  installer_license_Chinese.txt  upload_release.ps1
src/: localization_en_us.h  localization_zh_cn.h  mem.c  viv.c  viv.h
